# karma_re

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CODE_REVIEW.md  CRITICAL_FIXES.md  Makefile  README.md  TODO.md  changes.diff  pyproject.toml
docs/: all_funcs.h  naming-guidelines.md  simplification_analysis.md
docs/cflow/: ignore.txt
docs/dev/: critical_fixes.md
docs/fix-for-play-resets-playhead-bug/: changes.diff  karma-fix.md
docs/nested/: fix_double_nesting.py  fix_function_bodies.py  refactor_struct.py
help/: k1~.maxhelp  k2~.maxhelp  k3~.maxhelp  k4~.maxhelp  karma_post~.maxhelp  karma_pre~.maxhelp  karma_re~.maxhelp
init/: k1-objectmappings.txt  k2-objectmappings.txt  k3-objectmappings.txt  k4-objectmappings.txt  karma-objectmappings.txt  karma_re-objectmappings.txt
nested/: demo_refactoring.c  nested-struct.c  refactor_functions.py
source/projects/k1_tilde/: k1~.c
source/projects/k2_tilde/: k2~.c
source/projects/k3_tilde/: k3~.c
source/projects/k4_tilde/: CMakeLists.txt  README.md  args_parser.hpp  buffer_management.hpp  buffer_utils.hpp  dsp_utils.hpp  fade_engine.hpp  initial_loop.hpp  interpolation.hpp  k4~.c  k4~.cpp  karma.h  karma_config.h  loop_bounds.hpp  loop_config.hpp  math_utils.hpp  message_handlers.hpp  object_initialization.hpp  types.hpp  (+9 more)
source/projects/karma_re_tilde/: CMakeLists.txt  karma.h  karma_re~.c
tests/: Makefile  README.md  bench_core.c  bench_ref.c  core_main.c  diff.c  gen_core.sh  k4_main.c  karma_core.c  karma_core.h  max_stub.c  max_stub.h  oracle_main.c  scenarios.h  shell_main.c  unit_kernels.c
(+21 files in other folders)
